removing /testing/ packages from the Export-Package values
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1696 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -143,6 +143,7 @@
             <fileset dir="${basedir}">
                 <include name="**/source/**/*.java"/>
                 <exclude name="**/com/publicobject/**/*.java"/>
+                <exclude name="**/ca/odell/glazedlists/impl/testing/**/*.java"/>
             </fileset>
             <fileset dir="resources"/>
         </osgiBundleInfo>
