Reminder message at the end of release target for James.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1718 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -730,6 +730,8 @@
 			<param name="jar.file" value="${release.jar.file}"/>
 			<param name="dist.file" value="${release.dist.file}"/>
 		</antcall>
+		<echo message="${line.separator}Release build completed. Please upload with: 'ant -Dversion=${version} upload-release'"/>
+		<echo message="Remember to increase the value for build property 'next.release.version'"/>
 	</target>
 
 	<target name="check-release-artifacts">
