--- a/build.xml
+++ b/build.xml
@@ -201,7 +201,7 @@
 
 	<target name="core" depends="">
 		<mkdir dir="${classes.dir}"/>
-		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
                 <!-- swing -->
                 <exclude name="**/swing/**"/>
                 <!-- io -->
@@ -214,20 +214,20 @@
 	</target>
 
     <target name="migrationkit" depends="core">
-        <javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <include name="**/migrationkit/**"/>
         </javac>
     </target>
 
 	<target name="swing" depends="core">
-		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
 			<include name="**/swing/**"/>
 			<exclude name="**/migrationkit/**"/>
 		</javac>
 	</target>
 
 	<target name="io" depends="core">
-		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+		<javac destdir="${classes.dir}" srcdir="source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
 			<include name="**/ctp/**"/>
 			<include name="**/io/**"/>
 			<include name="**/nio/**"/>
@@ -248,7 +248,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/25145/swt-api.jar"/>
             <arg value="extensions/swt/lib/swt-api.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/swt/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/swt/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/swt/lib/" includes="*.jar"/>
             </classpath>
@@ -262,7 +262,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/24419/ktable.jar"/>
             <arg value="extensions/ktable/lib/ktable.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/ktable/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/ktable/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/ktable/lib/" includes="*.jar"/>
                 <fileset dir="extensions/swt/lib/" includes="*.jar"/>
@@ -277,7 +277,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/27334/forms.jar"/>
             <arg value="extensions/jgoodiesforms/lib/forms.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/jgoodiesforms/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/jgoodiesforms/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/jgoodiesforms/lib/" includes="*.jar"/>
             </classpath>
@@ -293,7 +293,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/40876/swingx.jar"/>
             <arg value="extensions/swinglabs/lib/swingx.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/swinglabs/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/swinglabs/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/swinglabs/lib/" includes="*.jar"/>
             </classpath>
@@ -307,7 +307,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/29958/nachocalendar.jar"/>
             <arg value="extensions/nachocalendar/lib/nachocalendar.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/nachocalendar/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/nachocalendar/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/nachocalendar/lib/" includes="*.jar"/>
             </classpath>
@@ -315,7 +315,7 @@
     </target>
 
     <target name="treetable" depends="core,swing">
-        <javac destdir="${classes.dir}" srcdir="extensions/treetable/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on"/>
+        <javac destdir="${classes.dir}" srcdir="extensions/treetable/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off"/>
     </target>
 
     <target name="jfreechart" depends="swing">
@@ -330,7 +330,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/26198/jfreechart.jar"/>
             <arg value="extensions/jfreechart/lib/jfreechart.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/jfreechart/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/jfreechart/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/jfreechart/lib/" includes="*.jar"/>
             </classpath>
@@ -354,7 +354,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/39276/hsqldb.jar"/>
             <arg value="extensions/hibernate/lib/hsqldb.jar"/>
         </java>				
-        <javac destdir="${classes.dir}" srcdir="extensions/hibernate/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/hibernate/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/hibernate/lib/" includes="*.jar"/>
             </classpath>
@@ -380,7 +380,7 @@
             <arg value="extensions/japex/lib/mail.jar"/>
         </java>
         <!-- compile the Japex performance tests -->
-        <javac destdir="${classes.dir}" srcdir="extensions/japex/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/japex/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/japex/lib/" includes="*.jar"/>
             </classpath>
@@ -408,7 +408,7 @@
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/37509/http.jar"/>
             <arg value="extensions/issuesbrowser/lib/http.jar"/>
         </java>
-        <javac destdir="${classes.dir}" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+        <javac destdir="${classes.dir}" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <fileset dir="extensions/swt/lib/" includes="*.jar"/>
                 <fileset dir="extensions/jfreechart/lib/" includes="*.jar"/>
@@ -659,7 +659,7 @@
 		<available classname="junit.framework.TestCase" property="junit.present"/>
 		<fail unless="junit.present" message="To run this task, install junit.jar and optional.jar into ${ant.home}/lib/ JUnit is available free at http://www.junit.org"/>
 		<mkdir dir="${testclasses.dir}"/>
-	    <javac destdir="${testclasses.dir}" srcdir="test" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+	    <javac destdir="${testclasses.dir}" srcdir="test" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="off">
             <classpath>
                 <pathelement location="${classes.dir}"/>
                 <fileset dir="extensions" includes="**/*.jar"/>
