fixing up the build for icu4j
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1796 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -505,7 +505,7 @@
         <mkdir dir="${java14_glazedlists.dir}/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="source"/>
-            <arg value="${ant.home}/lib/junit.jar"/>
+            <arg value="${ant.home}/lib/junit.jar${path.separator}lib/icu4j.jar"/>
             <arg value="${java14_glazedlists.dir}/source"/>
         </java>
 
